# trader_bot_backend

./: pyproject.toml
src/: app.py
src/config/: config.py
src/nlp/: news_sentiment_predictor.py
src/nlp_models/: extract_iex.py  sentiment_analysis_model.py
src/timeseries_models/: lstm_stock_predictor.py  prediction_model.py
